# SPM12

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENCE.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test.yml
examples/: .gitignore  demo.ipynb
spm12/: __init__.py  __main__.py  amypad_coreg.m  amypad_coreg_modify_affine.m  amypad_normw.m  amypad_resample.m  amypad_seg.m  cli.py  coreg_modify_affine.m  coreg_spm_m.m  normw_spm_m.m  regseg.py  resample_spm_m.m  seg_spm_m.m  setup_rt.py  standalone.py  utils.py
tests/: __main__.py  conftest.py  test_main.py  test_regseg.py  test_utils.py
