[metadata]
name = spm12
description = Statistical Parametric Mapping
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_file = LICENCE.md
url = https://github.com/AMYPAD/SPM12
project_urls =
    Changelog = https://github.com/AMYPAD/SPM12/releases
    Documentation = https://github.com/AMYPAD/SPM12/#SPM12
    Upstream Project = https://www.fil.ion.ucl.ac.uk/spm
maintainer = Casper da Costa-Luis
maintainer_email = casper.dcl@physics.org
keywords = fMRI, PET, SPECT, EEG, MEG
platforms = any
provides = spm12
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Other Scripting Engines
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
zip_safe = False
setup_requires = setuptools>=42; setuptools_scm[toml]>=3.4
include_package_data = True
packages = find:
install_requires =
    argopt
    miutil[nii]>=0.1.0
    brainweb>=1.6.2
    numpy
    scipy
[options.entry_points]
console_scripts =
    spm12 = spm12.cli:main
[options.extras_require]
dev =
    black; python_version >= "3.0"
    flake8
    twine
    wheel
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
    codecov
demo =
    miutil[plot]>=0.2.0
    matplotlib
[options.package_data]
* = *.md, *.rst, *.m

[flake8]
max_line_length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,.eggs

[bdist_wheel]
universal = 1
