[metadata]
name=spm12
description=Statistical Parametric Mapping
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache 2.0
license_file=LICENCE.md
url=https://github.com/AMYPAD/SPM12
project_urls=
    Changelog = https://github.com/AMYPAD/SPM12/releases
    Documentation = https://github.com/AMYPAD/SPM12/#SPM12
    Upstream Project=https://www.fil.ion.ucl.ac.uk/spm
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
keywords=fMRI, PET, SPECT, EEG, MEG
platforms=any
provides=spm12
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Other Scripting Engines
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries
    Topic :: System :: Installation/Setup
[options]
zip_safe = False
setup_requires=setuptools>=42; wheel; setuptools_scm[toml]>=3.4
install_requires=
    argopt
    miutil[nii]>=0.1.0,!=0.4.0,!=0.4.1
    setuptools  # pkg_resources
    brainweb>=1.6.2
    numpy
    scipy
include_package_data=True
packages=find:
python_requires=>=2.7
[options.extras_require]
dev=
    pre-commit
    twine
    wheel
    miutil[web]>=0.7.0
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
    codecov
demo=
    miutil[plot]>=0.3.0
    matplotlib
[options.entry_points]
console_scripts =
    spm12=spm12.cli:main
[options.package_data]
*=*.md, *.rst, *.m

[bdist_wheel]
universal = 1

[flake8]
max_line_length=88
extend-ignore=E203,P1
exclude=.git,__pycache__,build,dist,.eggs

[isort]
profile=black
known_first_party=spm12,tests

[tool:pytest]
timeout=300
addopts=-v --tb=short -rxs -W=error --log-level=debug -n=auto --durations=0 --cov=spm12 --cov-report=term-missing --cov-report=xml
filterwarnings=
    ignore:numpy.ufunc size changed.*:RuntimeWarning
