[metadata]
name=spm12
description=Statistical Parametric Mapping
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache-2.0
license_file=LICENCE.md
url=https://github.com/AMYPAD/SPM12
project_urls=
    Changelog=https://github.com/AMYPAD/SPM12/releases
    Documentation=https://github.com/AMYPAD/SPM12/#SPM12
    Upstream Project=https://www.fil.ion.ucl.ac.uk/spm
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
keywords=fMRI, PET, SPECT, EEG, MEG
platforms=any
provides=spm12
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Other Scripting Engines
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries
    Topic :: System :: Installation/Setup
[options]
zip_safe=False
setup_requires=setuptools>=42; wheel; setuptools_scm[toml]>=3.4
install_requires=
    argopt
    importlib_resources; python_version < "3.9"
    miutil[nii,web]>=0.7.2
    numpy
    scipy
include_package_data=True
packages=find:
python_requires=>=3.7
[options.extras_require]
dev=
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
demo=
    miutil[plot]>=0.3.0
    matplotlib
[options.entry_points]
console_scripts =
    spm12=spm12.cli:main
[options.packages.find]
exclude=tests
[options.package_data]
*=*.md, *.rst, *.m

[flake8]
max_line_length=99
extend_ignore=E261
exclude=.git,__pycache__,build,dist,.eggs

[yapf]
spaces_before_comment=15, 20
arithmetic_precedence_indication=true
allow_split_before_dict_value=false
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False
blank_line_before_nested_class_or_def=False

[isort]
profile=black
line_length=99
multi_line_output=4
known_first_party=spm12,tests

[tool:pytest]
timeout=300
addopts=-v --tb=short -rxs -W=error --log-level=debug -n=auto --durations=0 --cov=spm12 --cov-report=term-missing --cov-report=xml
filterwarnings=
    ignore:numpy.ufunc size changed.*:RuntimeWarning
